<resources>
    <string name="app_name">SqlServer</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="saf_mobile">SAF MOBILE</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="producto">Producto:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="eliminar">eliminar</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="ingrese_una_descripcion">Ingrese una descripcion</string>
    <string name="ingrese_un_prodcuto">Ingrese un producto</string>
    <string name="no_tienes_una_cuenta_reg_strate">¿No tienes una cuenta? Regístrate</string>
    <string name="guardar_usuario">Guardar usuario</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="letal">letal</string>
    <string name="_9mm">9mm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>