<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".FragmentLogin">


    <androidx.cardview.widget.CardView
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:backgroundTint="@color/fondoLogon"
        app:cardCornerRadius="100mm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="InOrMmUsage">


        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/saf_mobile"
                android:textColor="@color/textoLogo"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUser"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/ingrese_su_usuario"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPW"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_su_contrase_a"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/fondo"
                app:cardCornerRadius="20dp">

                <Button
                    android:id="@+id/btnIniciar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/fondo"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="@color/texto"
                    android:textSize="22sp"
                    android:textStyle="italic" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tvRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/no_tienes_una_cuenta_reg_strate"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
