<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:backgroundTint="@color/fondoAdd"
    android:padding="10dp"
    app:cardCornerRadius="20dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/producto"
            android:textColor="@color/textoLogo"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVisibleProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="9mm"
            android:textColor="@color/textoLogo"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/descripcion"
            android:textColor="@color/textoLogo"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVisibleDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="letal"
            android:textColor="@color/textoLogo"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="editar"
            android:src="@drawable/baseline_create_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/eliminar"
            android:src="@drawable/baseline_delete_24" />

    </LinearLayout>


</androidx.cardview.widget.CardView>